chore: fix bug frontend and backend
Signed-off-by: sanglee97 <admin@example.com>